[gd_scene load_steps=2 format=3 uid="uid://bly3m32h1b0pn"]

[ext_resource type="Script" path="res://addons/weekendspreadsheet/Scripts/GoogleSheetPage.gd" id="1_ya375"]

[node name="Page" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ya375")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 6.0
offset_right = 1151.0
offset_bottom = 441.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxDetails" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Sheet GID" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxDetails"]
custom_minimum_size = Vector2(2.08165e-12, 35)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxDetails/Sheet GID"]
layout_mode = 2
text = "GID:"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxDetails/Sheet GID"]
custom_minimum_size = Vector2(13.72, 2.08165e-12)
layout_mode = 2

[node name="GID Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxDetails/Sheet GID"]
layout_mode = 2
text = "Sheet GID"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxDetails"]
layout_mode = 2
theme_override_constants/margin_left = 30

[node name="Data Name" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxDetails"]
custom_minimum_size = Vector2(2.08165e-12, 35)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxDetails/Data Name"]
layout_mode = 2
text = "Name:"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/HBoxDetails/Data Name"]
custom_minimum_size = Vector2(13.72, 2.08165e-12)
layout_mode = 2

[node name="Data Name Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxDetails/Data Name"]
layout_mode = 2
text = "Data Name"

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/HBoxDetails/Data Name"]
custom_minimum_size = Vector2(13.72, 2.08165e-12)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Fetch Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(83.9, 2.08165e-12)
layout_mode = 2
theme_override_constants/h_separation = 2450
text = "Fetch"

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(13.72, 2.08165e-12)
layout_mode = 2

[node name="Open Sheet Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120.42, 2.08165e-12)
layout_mode = 2
theme_override_constants/h_separation = 2450
text = "Open Sheet
"

[node name="Spacer 4" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(119.32, 2.08165e-12)
layout_mode = 2

[node name="Delete Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(83.9, 2.08165e-12)
layout_mode = 2
theme_override_constants/h_separation = 2450
text = "Delete"

[node name="HFlowContainer" type="HFlowContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Error Text" type="Label" parent="MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85098, 0.00784314, 0, 1)
text = "Error message here"

[node name="Success Text" type="Label" parent="MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.52549, 0.337255, 1)
text = "Message here"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 17.68)
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 224.39)
layout_mode = 2
columns = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(271.98, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ID:1"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(271.98, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ID:2"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(271.98, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ID:3"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(271.98, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ID:4"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Fetch Button" to="." method="_on_fetch_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Open Sheet Button" to="." method="_on_open_sheet_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Delete Button" to="." method="_on_delete_button_pressed"]
